--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,7 @@ publish = false
 
 [dependencies]
 glutin = "0.22.0-alpha2"
-winit = "0.20.0-alpha3"
-takeable-option = "0.4"
-image = "0.21"
+cgmath = "0.17.0"
 
 [build-dependencies]
-gl_generator = "0.13"
+gl_generator = "0.14.0"
