--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 [dependencies]
 glutin = "0.22.0-alpha2"
 cgmath = "0.17.0"
+rand = "0.7.2"
 
 [build-dependencies]
 gl_generator = "0.14.0"
